samples/_failures_safe/1761072968_25b07c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a3284de.c: In function ‘parser_init’:
./samples/SAFE/__tmp_8a3284de.c:152:5: error: expected declaration or statement at end of input
  152 |     parser->has_error = 0;
      |     ^~~~~~
